--- a/app/views/posts/catalog.html.erb
+++ b/app/views/posts/catalog.html.erb
@@ -37,7 +37,7 @@
 <!--				<td><%= post.longitude %></td>-->
 				<td><%= link_to '場所', 'https://maps.google.co.jp/maps?q=loc:' + (post.latitude).to_s + "," + (post.longitude).to_s, target: "_blank" %></td>
 				<td><%= image_tag(post.img.url, :size => "300*300") %></td>
-				<td><%= link_to 'Show', post %></td>
+				<td><%= link_to 'Show', '/posts/' + (post.id).to_s %></td>
 			</tr>
 		<% end %>
 	</tbody>
