--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,20 +12,60 @@
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
+<%= javascript_include_tag Rails.root.join("/public/kobe/js/openclose.js").to_s %>
 </head>
 
 
 <body>
+
 <div id="container">
 	<header>
-		<h1 id="logo">新規投稿</h1>
+		<a href="/"><h1 id="logo">神戸市民の声</h1></a>
 	</header>
+<% if @post.errors.any? %>
+				<div id="error_explanation">
+						<h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+						<ul>
+						<% @post.errors.full_messages.each do |message| %>
+								<li><%= message %></li>
+						<% end %>
+						</ul>
+				</div>
+<% end %>
 	
 	<nav id="menubar">
-	<%= render 'form', post: @post %>
+	<form enctype="multipart/form-data" action="/posts" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="qYuLLjKDncRsXA3y4gZf+3s7WgzO3bbvnl+DgbW5M+KDBD7EvvKK7aJGZvctH9FnLwXWkD+jKq/a+JgQq1vxLw==" />
+		<p>お名前：<br>
+		<input type="text" name="post[name]"></p>
+<!--		<p>メールアドレス：<br>-->
+<!--		<input type="text" name="mail"></p>-->
+		<p>写真</p>
+		<div class="image">
+		<input type="file" id="target" accept=image/*" name="post[img]">
+		</div>
+		<img id="myImage" width="300" height="240">
+		<p>お問合せ内容：<br>
+		<textarea name="post[problem]" cols="30" rows="5"></textarea></p>
+		<p>位置情報</p>
+		<button type="button" onclick="getPosition();">位置情報を取得する</button>
+		<div id="ido">緯度</div>
+		<input type="text" id="position" accept="getPosition" name="post[latitude]">
+		<div id="keido">経度</div>
+		<input type="text" id="position2" accept="getPosition" name="post[longitude]">
+		<div id="latitude"></div>
+		<div id="longitude"></div>
+		<input type="hidden" value="false" name="post[display]">
+		<input id="sousin" type="submit" value="送信">
+	</form>
+		
+</div>
+
+
 	
 	<%= link_to 'Back', '/' %>
-		<script src="js/openclose.js"></script>
+<!--		<script src="public/kobe/js/openclose.js"></script>-->
+	
 </div>
 <footer>
 <small>Copyright&copy; <a href="index.html">SIMPLE SITE</a> All Rights Reserved.</small>
