--- a/app/views/posts/login_form.html.erb
+++ b/app/views/posts/login_form.html.erb
@@ -6,9 +6,9 @@
 
 <%= form_tag("/login") do %>
 	<p>User</p>
-	<input type="text" name="name">
+	<input type="text" name="name" required="required">
 	<p>PassWord</p>
-	<input type="password" name="password">
+	<input type="password" name="password" required="required">
 	<input type="submit" value="login">
 <% end %>
 
