--- a/public/kobe/css/style.css
+++ b/public/kobe/css/style.css
@@ -225,7 +225,10 @@ h1 {
 font-family: "Times New Roman";
 font-size: 48px;
 }
-img {padding: 100px;}
+img {
+padding: 0;
+margin: 0;
+}
 
 h2{
 color: #FFFFFF;
